[package]
name = "master-thesis-experiments"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.9.0-alpha.1"
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0.200", features = ["derive"] }
csv = "1.3.0"
chrono = "0.4.38"
indicatif = { version = "0.17.8", features = ["rayon"] }
rayon = "1.10.0"
derive_more =  { version = "1.0.0-beta.6", features = ["full"] }
more-asserts = "0.3.1"
serde_json = "1.0.117"
log = "0.4.21"
flexi_logger = "0.28.0"
log-panics = { version = "2.1.0", features = ["with-backtrace"] }
ena = "0.14.3"
